--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ foreach(PROG
         angle boundary coboundary
         distance_1d distance_2d distance_3d distance_boundary
         hypercube interface named_segment point
-        scale segment surface vtk_writer
+        scale region surface vtk_writer
 
 
 #             refinement refinement2 refinement3 refinement-triangles
