Algorithms: C-Implemented volume, surface, centroid, cross_prod, inner_prod
Added test for volumes, which makes use of these functions.
Basis for many other algorithms to come.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(LIB_VIENNAGRID_SOURCES viennagrid/io.cpp
+set(LIB_VIENNAGRID_SOURCES viennagrid/algorithm.cpp
+                           viennagrid/io.cpp
                            viennagrid/mesh.cpp
                            viennagrid/mesh_hierarchy.cpp
                            viennagrid/plc.cpp
