added support for aux data (void * for each element), started backend-cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 set(LIB_VIENNAGRID_SOURCES viennagrid/algorithm.cpp
                            viennagrid/io.cpp
+                           viennagrid/dynamic_sizeof.cpp
+                           viennagrid/element_buffer.cpp
+                           viennagrid/element_handle_buffer.cpp
                            viennagrid/mesh.cpp
                            viennagrid/mesh_hierarchy.cpp
                            viennagrid/plc.cpp
