--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -3,8 +3,8 @@
 # ADD_EXECUTABLE(viennagrid3_playground           viennagrid3_playground.cpp)
 # target_link_libraries(viennagrid3_playground    viennagrid)
 
-add_executable(accessor             accessor.cpp)
-target_link_libraries(accessor      viennagridpp)
+# add_executable(accessor             accessor.cpp)
+# target_link_libraries(accessor      viennagridpp)
 
 ADD_EXECUTABLE(algorithms           algorithms.cpp)
 target_link_libraries(algorithms    viennagridpp)
