VTK: Added reader functionality in C layer.
Tested with a mesh (no regions) and quantity fields.
TODO:
 - Support for regions in writer (to .pvd)
 - Test .pvd functionality (reader + writer)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ foreach(PROG
         distance_1d distance_2d distance_3d distance_boundary
         hypercube interface named_segment point
         #refinement refinement2 refinement3 refinement-triangles
-        scale region surface volume vtk_writer
+        scale region surface volume vtk_c vtk_writer
 
 
 #             voronoi_hex voronoi_rect voronoi_tet voronoi_triangle voronoi_line
